# form_builder_backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
form_builder/account/: admin.py  models.py
form_builder/account/migrations/: 0001_initial.py
form_builder/common/: admin.py  models.py  tasks.py  urls.py  views.py
form_builder/common/migrations/: 0001_initial.py
form_builder/custom_middlewares/: log_middleware.py
form_builder/form/: admin.py  models.py
form_builder/form/migrations/: 0001_initial.py
form_builder/form_builder/: __init__.py  celery.py  rest_custom_renderer.py  settings.py
form_builder/utils/: common_methods.py
nginx/: nginx.conf
